<resources>
    <string name="app_name">TodoApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">Todo masih kosong. Silahkan tambahkan yang baru.</string>
    <string name="judulnewtodo">New Todo</string>
    <string name="add">Add</string>
    <string name="checkbox">Check Box</string>
    <string name="priority">Priority</string>
    <string name="mediumpriority">Medium Priority</string>
    <string name="lowpriority">Low Priority</string>
    <string name="highpriority">High Priority</string>
    <string name="edittodo">Edit Todo</string>
    <string name="save">Save</string>
</resources>